[package]
name = "beetle-calculator"
version = "0.1.2"
edition = "2021"
description = "A terminal calculator for parsing simple maths expressions"
license = "MIT"
authors = ["beetle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.5.3"
