[package]
name = "beetle-calculator"
version = "0.2.0"
edition = "2021"
description = "A terminal calculator for parsing simple maths expressions"
license = "MIT"
authors = ["beetle"]
repository = "https://github.com/Mearkatz/beetle-calculator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.5.3"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.40"
